--- a/css/indexstyles.css
+++ b/css/indexstyles.css
@@ -2,9 +2,7 @@
 
 @import url(https://fonts.googleapis.com/css?family=Righteous);
 
-body{
-  background: rgb(152, 21, 36) url(http://www.cnclazerkesim.com.tr/wp-content/uploads/%E7%9C%9F%E7%B4%85%E3%81%AE%E3%82%B9%E3%83%86%E3%83%BC%E3%82%B8-%E3%82%AB%E3%83%BC%E3%83%86%E3%83%B3-STAGE-CURTAIN-VECTOR-%E3%82%A4%E3%83%A9%E3%82%B9%E3%83%88%E7%B4%A0%E6%9D%90-1024x688.jpg) center center no-repeat;
-}
+
 
 *:before, *:after {
     margin: 0;
@@ -63,7 +61,9 @@ body{
     0% {background-position: 100% -100%}
     } 
 
-    
+    body{
+  background: rgb(152, 21, 36) url(http://www.cnclazerkesim.com.tr/wp-content/uploads/%E7%9C%9F%E7%B4%85%E3%81%AE%E3%82%B9%E3%83%86%E3%83%BC%E3%82%B8-%E3%82%AB%E3%83%BC%E3%83%86%E3%83%B3-STAGE-CURTAIN-VECTOR-%E3%82%A4%E3%83%A9%E3%82%B9%E3%83%88%E7%B4%A0%E6%9D%90-1024x688.jpg) center center no-repeat;
+}
 /*カーテンの処理*/
 
 #wrap::before,#wrap::after{
@@ -200,4 +200,7 @@ body{
   }
 }
 
-
+#qrcode canvas{
+  padding: 10px;
+  background-color: #ffffff;
+}
